[gd_scene load_steps=3 format=3 uid="uid://fgymd8ext80c"]

[ext_resource type="Script" uid="uid://co1ygbrgr5vbm" path="res://pause_menu.gd" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://bic68yfigaahp" path="res://resume_button.gd" id="2_nwcfo"]

[node name="pauseMenu" type="CanvasLayer"]
script = ExtResource("1_hdmo1")

[node name="pauseContainer" type="MenuBar" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="pauseContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="resumeButton" type="Button" parent="pauseContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"
script = ExtResource("2_nwcfo")

[node name="optionsButton" type="Button" parent="pauseContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="restartButton" type="Button" parent="pauseContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[connection signal="pressed" from="pauseContainer/VBoxContainer/resumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="pauseContainer/VBoxContainer/optionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="pauseContainer/VBoxContainer/restartButton" to="." method="_on_restart_button_pressed"]
